标注模块开始

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -15,6 +15,9 @@ dlabeling:
   # 验证码类型 math 数组计算 char 字符验证
   captchaType: math
 
+  label:
+    defaultDataRootDir:
+
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
