--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -16,14 +16,14 @@ dlabeling:
   captchaType: math
 
   label:
-    defaultDataRootDir:
+    defaultDataRootDir: C:/Users/YYS/Desktop/temp
 
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306//dlabeling
+      url: jdbc:mysql://127.0.0.1:3306/dlabeling
       username: root
       password: 12345678
 
@@ -118,6 +118,10 @@ mybatis:
 captcha:
   enable: false
 
+logging:
+  level:
+    org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: trace
+
 # Swagger配置
 swagger:
   # 是否开启swagger
@@ -132,3 +136,5 @@ user:
     maxRetryCount: 5
     # 密码锁定时间（默认10分钟）
     lockTime: 10
+server:
+  port: 8080
