完成授权部分 完成权限申请

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -124,6 +124,7 @@ captcha:
 logging:
   level:
     org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: trace
+#    root: debug
 
 # Swagger配置
 swagger:
