--- a/labeling/pom.xml
+++ b/labeling/pom.xml
@@ -22,6 +22,10 @@
             <groupId>com.dlabeling</groupId>
             <artifactId>common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.dlabeling</groupId>
+            <artifactId>framework</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.projectlombok</groupId>-->
 <!--            <artifactId>lombok</artifactId>-->
