--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -117,12 +117,14 @@ mybatis:
   mapperLocations: classpath*:mapper/**/*Mapper.xml
   # 加载全局配置文件
   configLocation: classpath:mybatis/mybatis-config.xml
-
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 captcha:
   enable: false
 
 logging:
   level:
+    com.dlabeling.**.mapper: debug
     org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: trace
 #    root: debug
 
