完成导出、json文件更新

--- a/labeling/pom.xml
+++ b/labeling/pom.xml
@@ -26,6 +26,11 @@
             <groupId>com.dlabeling</groupId>
             <artifactId>framework</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.dlabeling</groupId>
+            <artifactId>plugin</artifactId>
+            <version>1.0</version>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.projectlombok</groupId>-->
 <!--            <artifactId>lombok</artifactId>-->
