--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -17,4 +17,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
+    <dependencies>
+        <dependency>
+            <groupId>com.dlabeling</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.dlabeling</groupId>
+            <artifactId>framework</artifactId>
+        </dependency>
+    </dependencies>
 </project>
