--- a/common/pom.xml
+++ b/common/pom.xml
@@ -57,6 +57,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.9.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
